--- a/www/index.html
+++ b/www/index.html
@@ -36,12 +36,7 @@
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="css/play-futbol.css">
-    <style>
-        .navbar {
-            margin-bottom: 20px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/play-futbol.css">    
     <title>Play Fútbol</title>
 </head>
 
@@ -55,95 +50,10 @@
             </div>
         </div>
         <div id="login" ng-show="main.currentView == main.loginView">
-            <h1>{{ main.currentView.title }}</h1>
-            <div class="login-page">
-                <div class="form">
-                    <form class="login-form">
-                        <input type="text" placeholder="username" required autofocus/>
-                        <input type="password" placeholder="password" required/>
-                        <button ng-click="main.currentView = main.dashboardView">login</button>
-                        <!--<p class="message">Not registered? <a href="#">Create an account</a></p>-->
-                    </form>
-                </div>
-            </div>
+            <!-- Login -->
         </div>
         <div id="dashboard" ng-show="main.currentView == main.dashboardView">                      
-            <!-- Navbar -->>
-            <nav class="navbar navbar-default">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-                            aria-expanded="false">
-                            <span class="sr-only">Toggle navigation</span>      
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>                      
-                        </button>
-                        <span class="navbar-brand" href="#">
-                            <img alt="Play Fútbol" src="img/play-futbol.png" width="40" height="30">
-                        </span>
-                        <sapan class="navbar-brand">{{ main.title }}</sapan>
-                    </div>                    
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">                        
-                        <ul class="nav navbar-nav navbar-right">                            
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                    Partidos asignados
-                                    <span class="caret"></span>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a href="#" ng-click="main.goMatch(0)">{{ main.getMatches()[0].tit  le }}</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" ng-click="main.goMatch(1)">{{ main.getMatches()[1].title }}</a>
-                                    </li>                                    
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Cerrar sesión</a>
-                            </li>
-                        </ul>
-                    </div>                 
-                </div>                
-            </nav>
-
-            <!-- Notificaciones del partido -->
-            <div id="match" class="container-fluid bg-success" ng-show="main.showMatch">
-                <div class="panel panel-success">
-                    <div class="panel-heading"> {{ main.currentMatch.title }} </div>
-                    <div class="panel-body">
-                        <p>{{ main.currentMatch.info }}</p>
-                    </div>                    
-                    <!-- Table -->
-                    <table id="match-table" class="table">
-                        <thead>
-                            <th>#</th>
-                            <th>Evento</th>
-                            <th>Descripción</th>
-                        </thead>
-                        <tbody>
-                            
-                        </tbody>
-                    </table>
-                </div>
-            </div>                      
-
-            <!-- Comandos para notificaciones -->
-            <div class="btn-group btn-group-justified align-bottom bottom-align-text" ng-show="main.showMatch" role="group" aria-label="...">
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default">Goles</button>
-                </div>
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default">Tarjetas</button>
-                </div>
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default">Partido</button>
-                </div>
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default" onclick="openCamera(event)">Capturas</button>
-                </div>                  
-            </div>            
+            <!-- Dashboard -->
         </div>        
     </div>
     
@@ -170,8 +80,7 @@
 
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="js/angular.js"></script>
-    <script type="text/javascript" src="js/angular-route.js"></script>
+    <script type="text/javascript" src="js/angular.js"></script>    
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
